test/ui/tests/packages/empty-manifest/package.stderr
error[E802]: the record does not contain the entry `name`
 --> ${TEST_FOLDER}/packages/empty-manifest/package.metadata:1:1
  |
1 |   # TEST fail check
  |  _^
2 | | 
  | |^ 
  |

error[E802]: the record does not contain the entry `version`
 --> ${TEST_FOLDER}/packages/empty-manifest/package.metadata:1:1
  |
1 |   # TEST fail check
  |  _^
2 | | 
  | |^ 
  |

error: aborting due to 2 previous errors
 note: the error E802 has a detailed explanation
 help: run `lushui explain E802` to view it

